[#3641] feat: `SequencingPolicy` adjusted to AF5 API (#3679)